--- a/member/vanno.html
+++ b/member/vanno.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Member Biodata View</title>
-    <link rel="icon" href="style/images/Logo_Onxy_Rb.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../style/style-bio.css">
@@ -23,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html"> Dashboard </a>
+                        <a class="nav-link" href="../indexdashboard.html"> Dashboard </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
