--- a/indexdashboard.html
+++ b/indexdashboard.html
@@ -67,7 +67,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Leader" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Leader</h3>
+                  <h3 class="card-title">Irvan</h3>
                   <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -80,7 +80,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 2" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Devanno</h3>
                   <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 3" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Ammar</h3>
                   <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -106,7 +106,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 4" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Annisa</h3>
                   <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -119,7 +119,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 5" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Member</h3>
+                  <h3 class="card-title">Ika</h3>
                   <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
