--- a/member/annisa.html
+++ b/member/annisa.html
@@ -7,6 +7,7 @@
     <title>Member Biodata View</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="icon" href="style/images/Logo_Onxy_Rb.png" type="image/png">
     <link rel="stylesheet" href="../style/style-bio.css">
 </head>
 
