--- a/indexdashboard.html
+++ b/indexdashboard.html
@@ -31,7 +31,7 @@
       <!-- Profile Image -->
       <div
         class="profile-img"
-        style="background-image: url('style/images/Logo_Onxy.png')"
+        style="background-image: url('style/images/Logo\ Onxy.png')"
       ></div>
       <h3>Onxy</h3>
       <p class="tagline">Trusted Partner</p>
@@ -67,7 +67,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Leader" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Irvan</h3>
+                  <h3 class="card-title">Leader</h3>
                   <a href="member/irvan.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -80,7 +80,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 2" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Devanno</h3>
+                  <h3 class="card-title">Member</h3>
                   <a href="member/vanno.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -93,7 +93,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 3" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Ammar</h3>
+                  <h3 class="card-title">Member</h3>
                   <a href="member/ammar1.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -106,7 +106,7 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 4" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Annisa</h3>
+                  <h3 class="card-title">Member</h3>
                   <a href="member/annisa.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
@@ -119,47 +119,45 @@
                      sizes="(max-width: 600px) 300px, (max-width: 1200px) 600px, 1000px"
                      alt="Member 5" class="card-img-top" />
                 <div class="card-body">
-                  <h3 class="card-title">Ika</h3>
+                  <h3 class="card-title">Member</h3>
                   <a href="member/ikanur.html" class="btn btn-primary">Show Bio</a>
                 </div>
               </div>
             </div>
+
+            <!-- Contact Section -->
+        <section id="contact" class="py-5">
+          <div class="container">
+              <h2 class="text-center mb-4">Contact</h2>
+              <div class="row justify-content-center">
+                  <div class="col-md-8">
+                      <!-- Contact form placeholder -->
+                  </div>
+              </div>
+  
+              <!-- Social Media Icons -->
+              <div class="text-center mt-4">
+                  <div class="social-icons">
+                      <a href="https://github.com/username" target="_blank" aria-label="GitHub">
+                          <i class="fab fa-github"></i>
+                      </a>
+                      <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
+                          <i class="fab fa-linkedin"></i>
+                      </a>
+                      <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
+                          <i class="fab fa-twitter"></i>
+                      </a>
+                  </div>
+              </div>
           </div>
-        </div>
       </section>
 
-      <!-- Contact Section -->
-      <section id="contact" class="py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact</h2>
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <!-- Contact form placeholder -->
-                </div>
-            </div>
-
-            <!-- Social Media Icons -->
-            <div class="text-center mt-4">
-                <div class="social-icons">
-                    <a href="https://github.com/username" target="_blank" aria-label="GitHub">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
-                    <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                </div>
-            </div>
+      <!-- Footer Section -->
+      <footer class="bg-primary text-white text-center py-3">
+          <p>&copy; Onxy Group 2024. All rights reserved.</p>
+      </footer>
+  </div>
         </div>
-      </section>
-    </div> <!-- Penutup untuk div.content -->
-
-    <!-- Footer Section -->
-    <footer class="bg-primary text-white text-center py-3">
-        <p>&copy; Onxy Group 2024. All rights reserved.</p>
-    </footer>
 
     <!-- Link ke JavaScript Bootstrap untuk fungsionalitas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
