--- a/indexdashboard.html
+++ b/indexdashboard.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Meta Charset untuk memastikan encoding karakter yang benar -->
     <meta charset="UTF-8" />
-    <!-- Meta Viewport untuk membuat situs web responsif di perangkat seluler -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Onxy Group</title>
-    <!-- Link ke favicon untuk ikon di tab browser -->
     <link rel="icon" href="style/images/Logo_Onxy_Rb.png" type="image/png">
-    <!-- Link ke stylesheet Bootstrap untuk styling -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Link ke stylesheet Font Awesome untuk ikon -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -31,7 +26,7 @@
       <!-- Profile Image -->
       <div
         class="profile-img"
-        style="background-image: url('style/images/Logo\ Onxy.png')"
+        style="background-image: url('style/images/Logo_Onxy.png')"
       ></div>
       <h3>Onxy</h3>
       <p class="tagline">Trusted Partner</p>
@@ -57,7 +52,7 @@
       <!-- Team Section -->
       <section id="team" class="py-5 bg-light">
         <div class="container">
-          <h2 class="text-center mb-4">Our Member</h2>
+          <h2 class="text-center mb-4">Our Members</h2>
           <div class="row g-4">
             <!-- Leader -->
             <div class="col-lg-4 col-md-6">
@@ -124,40 +119,42 @@
                 </div>
               </div>
             </div>
-
-            <!-- Contact Section -->
-        <section id="contact" class="py-5">
-          <div class="container">
-              <h2 class="text-center mb-4">Contact</h2>
-              <div class="row justify-content-center">
-                  <div class="col-md-8">
-                      <!-- Contact form placeholder -->
-                  </div>
-              </div>
-  
-              <!-- Social Media Icons -->
-              <div class="text-center mt-4">
-                  <div class="social-icons">
-                      <a href="https://github.com/username" target="_blank" aria-label="GitHub">
-                          <i class="fab fa-github"></i>
-                      </a>
-                      <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
-                          <i class="fab fa-linkedin"></i>
-                      </a>
-                      <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
-                          <i class="fab fa-twitter"></i>
-                      </a>
-                  </div>
-              </div>
           </div>
+        </div>
+      </section>
+
+      <!-- Contact Section -->
+      <section id="contact" class="py-5">
+        <div class="container">
+          <h2 class="text-center mb-4">Contact</h2>
+          <div class="row justify-content-center">
+            <div class="col-md-8">
+              <!-- Contact form placeholder -->
+            </div>
+          </div>
+  
+          <!-- Social Media Icons -->
+          <div class="text-center mt-4">
+            <div class="social-icons">
+              <a href="https://github.com/username" target="_blank" aria-label="GitHub">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="https://linkedin.com/in/username" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+              </a>
+              <a href="https://twitter.com/username" target="_blank" aria-label="Twitter">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!-- Footer Section -->
       <footer class="bg-primary text-white text-center py-3">
-          <p>&copy; Onxy Group 2024. All rights reserved.</p>
+        <p>&copy; Onxy Group 2024. All rights reserved.</p>
       </footer>
-  </div>
-        </div>
+    </div>
 
     <!-- Link ke JavaScript Bootstrap untuk fungsionalitas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
